--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@ h1 {letter-spacing: 6px}
 <div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
   <div class="w3-third">
   <p class="w3-large"> first feature</p>
-    <img src="images/Appointment.png" style="width:100%">
+    <img src="Tafe19S105/images/Appointment.png" style="width:100%">
   
   </div>
 
   <div class="w3-third">
   <p class="w3-large"> first feature</p>
-    <img src="images/Contacts.png" style="width:100%">
+    <img src="Tafe19S105/images/Contacts.png" style="width:100%">
     
 
     </div>
     <div class="w3-third">
     <p class="w3-large"> first feature</p>
-    <img src="images/Personal.png" style="width:100%">
+    <img src="Tafe19S105/images/Personal.png" style="width:100%">
   </div>
 </div>
   
