--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ h1 {letter-spacing: 6px}
 <div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
   <div class="w3-third">
   <p class="w3-large"> first feature</p>
-    <img src="images/Appointment.png" style="width:100%">
+    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" style="width:100%">
   
   </div>
 
