--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@ h1 {letter-spacing: 6px}
 <!-- Photo Grid -->
 <div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
   <div class="w3-third">
-  <p class="w3-large"> first feature</p>
+  <p class="w3-large">Appointments Feature</p>
     <img src="http://ztzchart.com/images/Appointment.png" style="width:100%">
   
   </div>
 
   <div class="w3-third">
-  <p class="w3-large"> first feature</p>
+  <p class="w3-large">Contacts Feature</p>
     <img src="http://ztzchart.com/images/Contacts.png" style="width:100%">
     
 
     </div>
     <div class="w3-third">
-    <p class="w3-large"> first feature</p>
+    <p class="w3-large">Personal Feature</p>
     <img src="http://ztzchart.com/images/Personal.png" style="width:100%">
   </div>
 </div>
